# RP2040-RTOS

./: .gitignore  .gitmodules  Board.mk  CMakeLists.txt  Config.mk  Makefile  README.md  arm-none-eabi.cmake  rp2040.ld
core/: clock.c  clock.cpp  clock.h  core.h  gpio.c  gpio.h  interrupts.h  irq.h  resets.h  rp2040.h  startup.c  startup.cpp  uart.c  uart.cpp  uart.h
docs/: Files.md  Program-Entry.md
dont compile/Other/: NOT_rp2040_.ld  boo2.S
dont compile/old/: delay.h  malloc.cpp  malloc_.h  nvic.h  systick.h
dont compile/sdk/: RP2040.h  addressmap.h
dont compile/temp/: capi.cpp  capi.h
kernel/: Kernel.c  Kernel.cpp  Mutex.h  PendSVHandler.S  SVCall_temp.S  Scheduler.c  Scheduler.cpp  Scheduler.h  cm0plus.h  core.cpp  core1.c  cortex.cpp  cortex.h  delay.c  delay.cpp  enter_main.S  handers.cpp  kernel.h  list.c  list.h  main.cpp  malloc.cpp  reset.S  startup.c  startup.cpp  vectors.S  vectors_core1.S
kernel/include/: ArmUtil.h  nvic.cpp  systick.cpp
kernel/src/: SVCall.S  Scheduler.h  cm0plus.h  common.h  enter_main.S  kernel.h  reset.S  startup.cpp
kernel/wip/: cores.h
kernel/wip/Components/: Components.cpp  Components.h  README.md
kernel/wip/errors/: errors.h
src/: calcHeading.cpp  compass.c  delay.c  delay.h  gpio.c  gpio.h  itoa.c  main.c  main.cpp  nvic.c  nvic.h  reset.S  resets.c  resets.h  rp2040.h  startup.c  string_conv.cpp  systick.c  systick.h  uart.c  uart.h  vector_table.h  xosc.c
src/print/: Print.cpp  Print.h
tools/: elf2uf2
